<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.web</groupId>
        <artifactId>codeFm</artifactId>
        <version>1.0.0</version>
    </parent>
    <groupId>org.web.codefm</groupId>
    <artifactId>codefm-api</artifactId>
    <version>1.0.0</version>
    <name>api</name>
    <description>api</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
        <openapi-generator.version>7.2.0</openapi-generator.version>
    </properties>
    <dependencies>

        <!-- modules -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>codefm-domain</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>codefm-application</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.6</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${openapi-generator.version}</version>
                <executions>
                    <!-- Generación para API privada -->
                    <execution>
                        <id>private-api</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/private-api.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>org.web.codefm.api</apiPackage>
                            <modelPackage>org.web.codefm.model</modelPackage>
                            <configOptions>
                                <interfaceOnly>true</interfaceOnly>
                                <useSpringBoot3>true</useSpringBoot3>
                                <documentationProvider>springdoc</documentationProvider>
                                <annotationLibrary>swagger2</annotationLibrary>
                                <useTags>true</useTags>
                            </configOptions>
                            <skipOperationExample>true</skipOperationExample>
                        </configuration>
                    </execution>

                    <!-- Generación para API pública -->
                    <execution>
                        <id>public-api</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/public-api.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <apiPackage>org.web.codefm.api</apiPackage>
                            <modelPackage>org.web.codefm.model</modelPackage>
                            <configOptions>
                                <interfaceOnly>true</interfaceOnly>
                                <useSpringBoot3>true</useSpringBoot3>
                                <documentationProvider>springdoc</documentationProvider>
                                <annotationLibrary>swagger2</annotationLibrary>
                                <useTags>true</useTags>
                            </configOptions>
                            <skipOperationExample>true</skipOperationExample>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>repackage</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
